<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_logo"
            android:layout_width="126dp"
            android:layout_height="74dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_smi" />

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/join_with_me_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo" />

        <TextView
            android:id="@+id/tv_register_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/join_with_me_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_title" />

        <View
            android:id="@+id/dotted"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/dotted"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:background="@drawable/bg_image"
            app:srcCompat="@drawable/ic_image"
            app:layout_constraintTop_toTopOf="@+id/dotted"
            app:layout_constraintStart_toStartOf="@id/dotted"
            app:layout_constraintEnd_toEndOf="@id/dotted"
            app:layout_constraintBottom_toBottomOf="@id/dotted"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:expandedHintEnabled="false"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dotted">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan email Anda"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/username"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:expandedHintEnabled="false"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_email">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan nama pengguna Anda"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:expandedHintEnabled="false"
            app:passwordToggleEnabled="true"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_username">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan kata sandi Anda"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/date_birthday"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:expandedHintEnabled="false"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password">

            <EditText
                android:id="@+id/edt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="08 July 2000"
                android:fontFamily="@font/montserrat_medium"
                android:focusable="false"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_gpa"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/gpa"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:expandedHintEnabled="false"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_date">

            <EditText
                android:id="@+id/edt_gpa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukkan IP terkahir Anda"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="numberDecimal"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/address"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:expandedHintEnabled="false"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_gpa">

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="Masukkan domisili Anda"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textMultiLine"
                android:maxLines="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_motivation_letter"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/motivation_letter"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:expandedHintEnabled="false"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:boxStrokeErrorColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_address">

            <EditText
                android:id="@+id/edt_motivation_letter"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:maxLength="250"
                android:hint="berikan motivation letter terbaik anda (maks. 250 karakter)"
                android:fontFamily="@font/montserrat_medium"
                android:inputType="textMultiLine"
                android:maxLines="5" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_semi_bold"
            android:background="@drawable/bg_btn_primary"
            app:layout_constraintTop_toBottomOf="@+id/til_motivation_letter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            tools:text="Sudah punya akun? Masuk"
            android:textSize="15sp"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>